dnl -*-m4-*-
dnl configure.in for ICU4JNI
dnl Ram Viswanadha
dnl copyright (c) 2001 IBM, Inc.

dnl Process this file with autoconf to produce a configure script
AC_INIT(src/native/collation/CollationInterface.h)
AC_PREFIX_PROGRAM(genrb)
# Cross compiling is taken care of becuase you're pointing to an entire set of configuration options
AC_CHECK_FILE($prefix/lib/icu/Makefile.inc,,AC_MSG_ERROR([Could not find the installed ICU. Re-run ./configure with --prefix=XXX where XXX is the same prefix that the ICU was configured with. ]))

OLDCPPFLAGS=${CPPFLAGS}
CPPFLAGS="${CPPFLAGS} -I$prefix/include"
AC_CHECK_HEADERS($prefix/include/unicode/utypes.h,,AC_MSG_ERROR([Could not find the installed ICU. Re-run ./configure with --prefix=XXX where XXX is the same prefix that the ICU was configured with. ]))
CPPFLAGS=${OLDCPPFLAGS}

PACKAGE="icu4jni"
AC_SUBST(PACKAGE)

AC_CHECK_PROG(AUTOCONF, autoconf, autoconf, true)

ICU_MAKEFILE=$prefix/lib/icu/Makefile.inc
AC_SUBST(ICU_MAKEFILE)

AC_PATH_PROG(JAVA_HOME,java,,)

AC_SUBST(JAVA_HOME)

AC_CHECK_PROG(JAVA,java ,java ,false)
AC_CHECK_PROG(JAVAC,javac ,javac ,false)
AC_CHECK_FILE($JAVA_HOME/include/jni.h,,AC_MSG_ERROR([Could not find jni include file please check JAVA_HOME enviroment variable.]))
AC_CHECK_FILE($JAVA_HOME/include/$OSTYPE/jni_md.h,,AC_MSG_ERROR([Could not find jni_md.h include file please check its existence.]))

AC_OUTPUT([Makefile])
AC_OUTPUT_COMMANDS([echo creating build directory.],mkdir build)
AC_OUTPUT_COMMANDS([echo creating build/lib directory.],mkdir build/lib)
AC_OUTPUT_COMMANDS([echo creating build/classes directory.], mkdir build/classes)
 
dnl # calexpo/Makefile
